# Object_Detection_with_FasterRCNN

./: .gitignore  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
notebook/: guns_object_detection.ipynb
src/: data_ingestion.py  model_architecture.py
