[project]
name = "object-detection-with-fasterrcnn"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "dvc-gs>=3.1.0",
    "fastapi[all]>=0.138.0",
    "kagglehub>=1.0.2",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "setuptools>=82.0.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.49.0",
]
